--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
 	server {
     listen 8080;
     server_name localhost;
-	root /home/andrey_lobachev/java_test/Authorization_Service/src/main/resources/static
+	root /home/andrey_lobachev/java_test/Authorization_Service/src/main/resources/static;
 	index index.html;
 
     location / {
